@@ -2,11 +2,9 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <tree>
-    <field name="code"/>
-    <field name="name"/>
-    <field name="quantity"/>
-    <field name="forecast_quantity"/>
-    <field name="default_uom"/>
+    <field name="product" expand="1"/>
+    <field name="quantity" symbol="default_uom"/>
+    <field name="forecast_quantity" symbol="default_uom"/>
     <field name="cost_value" sum="Cost Value"/>
     <field name="consumable" tree_invisible="1"/>
 </tree>
